deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arrlue
  name: arrlue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: arrlue
  strategy: {}
  template:
    metadata:
      labels:
        app: arrlue
    spec:
      containers:
      - image: arrlue/arrlue
        name: arrlue
        imagePullPolicy: Always
        ports: 
        - containerPort: 80
