sevice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arrlue
  name: arrlue-service
spec:
  ports:
  - port: 80 #change to 80
    protocol: TCP
    targetPort: 80 #change to 80
  selector:
    app: arrlue
  type: ClusterIP
